--- a/front-web/src/Components/Header/styles.css
+++ b/front-web/src/Components/Header/styles.css
@@ -9,6 +9,7 @@
     font-weight: bold;
     font-size: 24px;
     margin-left: 15px;
+    float: left;
   }
   
   .logo-text-1 {
@@ -16,6 +17,15 @@
   }
   
   .logo-text-2 {
+    color: #FFF;
+  }
+
+  .owner-text {
+    text-align:  right;
+    flex: 3;
+  }
+
+  .text-owner {
     color: #FFF;
   }
   
